--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
 /* CSS Document */
 
 body{
-	background-color:#e1382d;
+	/*background-color:#e1382d;*/
+    background-color:#EEEEEE;
 }
 
 .title{
 	position:absolute;
-	top:80px;
+	top:40px;
 	margin:0 auto;
 	left:20px;
 	right:20px;
@@ -28,7 +29,7 @@ body{
 }
 
 paper-card{
-	margin-top:200px;
+	margin-top:100px;
 }
 
 .card-container{
@@ -77,7 +78,7 @@ paper-dialog {
 	}
 
 	.card-container{
-		margin-top:200px;
+		margin-top:110px;
 		width:auto;
 	}
 
