--- a/teststyle.css
+++ b/teststyle.css
@@ -17,6 +17,8 @@
 textarea{
 	margin-left:auto;
 	margin-right:auto;
+    margin-bottom: auto;
+    height: auto;
 	resize:none;
 	width:99.5%;
 	font-size:20px;
@@ -110,7 +112,6 @@ iron-pages{
 		font-size:30px;
 		border:none;
 		width: auto;
-		height:20%;
 		outline: none;
 	}
 
