--- a/teststyle.css
+++ b/teststyle.css
@@ -18,7 +18,7 @@ textarea{
 	margin-left:auto;
 	margin-right:auto;
     margin-bottom: auto;
-    height: auto;
+    height: 100%;
 	resize:none;
 	width:99.5%;
 	font-size:20px;
