--- a/teststyle.css
+++ b/teststyle.css
@@ -17,7 +17,7 @@
 textarea{
 	margin-left:auto;
 	margin-right:auto;
-    margin-bottom: auto;
+    margin-bottom: 20px;
     height: 100%;
 	resize:none;
 	width:99.5%;
