--- a/teststyle.css
+++ b/teststyle.css
@@ -14,6 +14,12 @@
 	margin-top:-25px;
 }
 
+.dialog-content{
+	height: -webkit-calc(100% - 100px);
+	height:    -moz-calc(100% - 100px);
+	height:         calc(100% - 100px);
+}
+
 textarea{
 	margin-left:auto;
 	margin-right:auto;
