--- a/teststyle.css
+++ b/teststyle.css
@@ -24,6 +24,9 @@ textarea{
 	font-size:20px;
 	outline: none;
 	border:none;
+    width: -webkit-calc(100% - 60px);
+    width: -moz-calc(100% - 60px);
+    width: calc(100% - 60px);
 }
 
 .dropmenu{
