--- a/teststyle.css
+++ b/teststyle.css
@@ -61,7 +61,9 @@ textarea{
 my-menu{
     position:absolute;
     bottom:-30px;
-    left: 20px;
+    left: 60px;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 iron-pages{
@@ -139,7 +141,7 @@ iron-pages{
 @media only screen and (max-width: 410px), only screen and (max-device-width: 410px) {
 
     my-menu{
-        left: -10px;
+        left: 40px;
     }
 
 }
