--- a/teststyle.css
+++ b/teststyle.css
@@ -150,7 +150,11 @@ iron-pages{
 @media only screen and (max-width: 410px), only screen and (max-device-width: 410px) {
 
     my-menu{
-        left: 90px;
+        left: 70px;
+    }
+
+    .camerafab{
+        left: 130px;
     }
 
 
