--- a/teststyle.css
+++ b/teststyle.css
@@ -77,7 +77,7 @@ textarea{
 
 my-menu{
     position:absolute;
-    bottom:-30px;
+    bottom:-25pt;
     left: 70px;
     margin-left: 0;
     margin-right: 0;
@@ -158,7 +158,7 @@ iron-pages{
 @media only screen and (max-width: 410px), only screen and (max-device-width: 410px) {
 
     my-menu{
-        left: 40%;
+        left: 30%;
     }
 
     .camerafab{
