--- a/teststyle.css
+++ b/teststyle.css
@@ -14,6 +14,16 @@
 	margin-top:-25px;
 }
 
+.first-row{
+	height: -webkit-calc(100% - 60pt);
+	height:    -moz-calc(100% - 60pt);
+	height:         calc(100% - 60pt);
+}
+
+.second-row{
+	height: 60pt;
+}
+
 .dialog-content{
 	height: -webkit-calc(100% - 70px);
 	height:    -moz-calc(100% - 70px);
