--- a/teststyle.css
+++ b/teststyle.css
@@ -46,7 +46,9 @@ paper-button.white {
 }
 
 paper-tabs{
-	--paper-tabs-selection-bar-color: #F44336;
+    --paper-tabs-selection-bar: {
+        --paper-tabs-selection-bar-color: #F44336;
+    }
 }
 
 paper-button.indigo {
